--- a/prod/video-player/index.html
+++ b/prod/video-player/index.html
@@ -1163,10 +1163,10 @@
       <div>
         <div class="chapter-tabs" id="chapterTabs"></div>
         <div class="top-row-subtitle">
-          Use ← / → or the buttons to navigate. Tap the video to play / pause, or open in theater mode.
+          Use ← / → to navigate. Tap the video to play / pause, or open in theater mode.
         </div>
         <div class="mobile-swipe-hint" id="mobileSwipeHint">
-          Swipe left/right to navigate. Tap the video to play or pause.
+          Swipe left/right to navigate. Tap the video to play or pause. Rotate for theater mode.
         </div>
       </div>
 
